# tre

./: CMakeLists.txt
lib/: CMakeLists.txt  tre-internal.h
local_includes/: tre-config.h
